# SunflowerOS

./: .gitignore  .gitmodules  EngineClient.cs  README.md  worldAnalyzer.py  worldAnalyzer2.py  worldAnalyzer3.py
3DMPP_Modified/: calculate_mupots_integrate.py  calculate_mupots_topdown_depth.py
3DMPP_Modified/lib/: inteutil.py
3dcrowdnet_release.nosync/: .gitignore
3dcrowdnet_release.nosync/common/nets/: module.py
3dcrowdnet_release.nosync/common/utils/: vis.py
3dcrowdnet_release.nosync/demo/: demo.py  multiPoseprofile
AvatarLifeUnity.nosync/Assets/: ClientFastImg.cs
AvatarLifeUnity.nosync/Assets/Scenes/: MainScene.unity
Avatars/: README.md  worldAnalyzer3.py
Avatars/3DMPP_Modified/: calculate_mupots_btmup.py  calculate_mupots_topdown_pts.py  keypointsTools.py
Avatars/3DMPP_Modified/lib/: posematcher.py
Avatars/3dcrowdnet_release.nosync/: requirements.sh
Avatars/3dcrowdnet_release.nosync/main/: model.py
Avatars/AvatarLifeUnity.nosync/Assets/: ClientFastImg.cs  packages.config
Avatars/AvatarLifeUnity.nosync/Assets/Scenes/: MainScene.unity
Avatars/MagicLeap2-Synced/: commands.txt  cppyy-backend-diff.patch  cppyytest.py
Avatars/MagicLeap2-Synced/LaunchOnMainAndroidProcess/: CMakeLists.txt  PATCH_termux.c  Steps.txt  main.cpp
Avatars/MagicLeap2-Synced/SKTemplate-CMake/: CMakeLists.txt
Avatars/MagicLeap2-Synced/SKTemplate-CMake/src/: OneEuroFilter.cpp  PoseModel.cpp  SunflowerEditorRuntime.cpp  SunflowerEditorTesting.cpp  camera.h  debug.h  main.cpp  main.py  main_hot.cpp
Avatars/MagicLeap2-Synced/dlopentesting/: CMakeLists.txt  main.cpp
Avatars/MagicLeap2-Synced/kernel_launcher_so/: CMakeLists.txt  main.cpp
Avatars/MagicLeap2-Synced/kernel_launcher_so/jupyter_kernel/: kernel.json
Avatars/MagicLeap2-Synced/moonlight-embedded/: CMakeLists.txt  README.md
Avatars/MagicLeap2-Synced/moonlight-embedded/src/: audio.c  audio.h  config.c  config.h  connection.c  ffmpeg.c  ffmpeg.h  moonlightsdk.c  moonlightsdk.h  video.c  video.h
SandboxingAggregator/: README.md
SandboxingAggregator/src/: Contract.sol
SandboxingAggregator/test/: Contract.t.sol
VibesEnforcer/: bot.py  bot2.py  current_output.html  output_V2FeelPred_bestOf3.html  output_V2FeelPred_format.html  output_V3FeelPred_moreSamples.html  output_V4.1FeelPred_tweaked.html  output_V4FeelPred_3takes.html  output_V4FeelPred_bothSides.html  output_V4FeelPred_moresamples.html  output_V5.html  output_feelingPredv2.html  output_v3FeelPred_3takes.html
VibesEnforcer/Instrument1/: fourML1.py  fourMLOldModel.py  guidedInstrument.py  guidedInstrument2.py  lakhexploration.py  midiServer.py  oneNotes.js  testPage.html  threeFullRoll.js  twoKeyboard.js
VibesEnforcer/chromextension.nosync/: README.md  package-lock.json  package.json  webpack.config.js
VibesEnforcer/chromextension.nosync/src/: manifest.json
VibesEnforcer/chromextension.nosync/src/pages/Content/: index.jsx
sunflowereditor-vscode/: CHANGELOG.md  README.md  package.json  tsconfig.json
sunflowereditor-vscode/src/: extension.ts
termux-app-master2/app/src/main/: AndroidManifest.xml
termux-app-master2/app/src/main/java/com/termux/: SandboxRunner.java
termux-app-master2/app/src/main/sandbox/: Android.mk  main.c
termux-app-master2/terminal-emulator/src/main/jni/: termux.c
